k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: retail-store
  labels:
    name: retail-store
    project: bedrock
